# bsdbng

./: .codespellrc  .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  codeql.yaml  release.yaml
data/derived/: clustered_heatmap_genus_top100_matrix.tsv  condition_taxon_clustered_heatmap_top40x100_matrix.tsv
data/kg-microbe/: provenance.json
docs/: bugsigdb-access-benchmark.md  bugsigdb-access-methods.md  bugsigdb-live-counts.md  origin-story.md
schema/: .linkmllint.yaml  bsdbng.yaml
scripts/: benchmark_bugsigdb_access.py  create_clustered_heatmap.py  create_condition_taxon_heatmap.py  download_kg_microbe.py  generate_study_tsv_from_yaml.py  linkml_store_index.py  linkml_store_load.py  linkml_store_query.py  sync_agent_docs.py
src/bsdbng/: __init__.py  download.py  ingest.py  models.py  paths.py  stats.py  validate.py
src/bsdbng/datamodel/: __init__.py  bsdbng_pydantic.py
tests/: test_download.py  test_ingest.py  test_models.py
