[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsdbng"
version = "0.1.0"
description = "Strict BugSigDB ingestion and normalization"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mark Miller" }
]
dependencies = [
  "httpx>=0.28.0",
  "linkml>=1.10.0",
  "linkml-runtime>=1.8.3",
  "pydantic>=2.13.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "ruff>=0.15.10",
  "types-PyYAML>=6.0.12.20260408",
]
kg = [
  "gdown>=6.0.0",
]
mongo = [
  "linkml-store[llm,mongodb]>=0.3.0",
  "pymongo>=4.17.0",
  "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "ruff>=0.15.10",
  "types-PyYAML>=6.0.12.20260408",
]
qa = [
  "bandit[toml]>=1.8.3",
  "deptry>=0.21.1",
  "pip-audit>=2.10.0",
  "pytest-cov>=6.0.0",
  "types-PyYAML>=6.0.12.20260408",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]
exclude = ["src/bsdbng/datamodel/bsdbng_pydantic.py"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "ARG",
  "PIE",
  "PT",
  "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "src"
exclude = [
  "src/bsdbng/datamodel/bsdbng_pydantic\\.py$",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration' --durations=5"
markers = [
  "integration: tests that require network access or external services",
]

[tool.coverage.run]
source = ["bsdbng"]
omit = ["src/bsdbng/datamodel/bsdbng_pydantic.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.codespell]
skip = [
  ".venv",
  "uv.lock",
]
quiet-level = 3

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

[tool.deptry]
exclude = [
  ".venv",
  "tests",
  "src/bsdbng/datamodel",
]
ignore = [
  "DEP002",
]
